刷了十来个旧题……有、慢

--- a/回溯刷题集合.md
+++ b/回溯刷题集合.md
@@ -1,3 +1,9 @@
+#### [17. 电话号码的字母组合](https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/)
+
+
+
+
+
 #### [22. 括号生成](https://leetcode-cn.com/problems/generate-parentheses/)
 
 
@@ -8,9 +14,140 @@
 
 
 
+#### 17. 电话号码的字母组合 
+
+大成功！我居然自己做出来了，嘤嘤嘤QWQ
+
+每次看到这个题目，我都直接跳转答案区了，因为它。。还有一个字符串的变换，我一看到就想跳过了，没想到啊。
+
+今天思路突然清晰，就想着试一试了，没想到成了！
+
+其实也是很容易的【x】
+
+得到的一组电话号码，就一个一个地数嘛，比如`23`，那就先拿2里面对应的`abc`中的一个（这里应该循环，拿完就到下一层），然后再拿3对应的`def`，到达终止条件之后就回退！
+
+---
+
+其实我一开始写的时候，只知道它是回溯，就没想别的，就知道它是回溯，于是我就写出一个框框出来。
+
+
+
+```java
+class Solution {
+    List<String> res = new ArrayList<>();
+    String[] tele = new String[]{
+        "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"
+    };
+    public List<String> letterCombinations(String digits) {
+        if(digits == null || digits.length() == 0){
+            return res;
+        } 
+        backtrack();
+        return res;
+    }
+
+    private void backtrack( ){ 
+        // 终止
+        if( ){ 
+        }
+        // 循环
+        for(){
+            
+        }
+    }
+}
+```
+
+然后我就自己想想了，这个应该加什么参数呢？它需要的是一个个电话号码对应的字符串，所以应该比较长度，一旦加够了就停止。
+
+这里我自己也踩了一个大坑，那用什么东西来放临时存储的结果呢？我直接一个无脑ArrayList……这里是字符串，而且还有拼接操作，应该用StringBuilder sb来放，因此比较它们两的长度。
+
+此时，你也应该知道，`backtrack`函数中需要的参数之一就是sb
+
+```java
+if(sb.length() == digis.length())
+```
+
+接下来，就是需要遍历循环了，第一层很明显，就是digits。
+
+```java
+for(int i = index;i < digits.length();i++){
+```
+
+那个index是什么呢？其实是判断我到哪个字符了，比如`23`，我一开始应该先看2，然后再看3，我用这个index来确定到底是到2还是到3，这也是上面说到的一层一层地加，到第几层的意思。
+
+然后……这里我就很想看答案了，因为感觉很陌生，虽然是有思路嘛但是就是不相信自己【x】
+
+确定了遍历这个字符（2还是3），然后就该遍历2或者3对应的字符串啊，所以接下来该根据这个数字，从对应的符号表中查对应的字符串，然后遍历它。
+
+要遍历的字符串
+
+`String s = tele[digits.charAt(i) - '2'];`
+
+然后开始遍历。
+
+```java
+for(int j = 0;j < s.length();j++){
+    sb.append(s.charAt(j));
+    backtrack(digits, sb, i + 1);
+    sb.deleteCharAt(sb.length() - 1);
+}
+```
+
+内层的遍历也不用管它，大概抽象一下，就……加了这个，然后就到下一层（指i+1，这个很重要！）
+
+这样就写完了（？？？）
+
+再连起来看看，你append之后，再回溯，这时进入下一层，然后再继续append，直到满足终止条件为止。
+
+不错，下面是完整代码 。
+
+
+
+```java
+class Solution {
+    List<String> res = new ArrayList<>();
+    String[] tele = new String[]{
+        "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"
+    };
+    public List<String> letterCombinations(String digits) {
+        if(digits == null || digits.length() == 0){
+            return res;
+        } 
+        backtrack(digits, new StringBuilder(), 0);
+        return res;
+    }
+
+    private void backtrack(String digits, StringBuilder sb, int index){
+        // 终止条件
+        if(sb.length() == digits.length()){
+            res.add(sb.toString());
+            return ;
+        }
+		
+        for(int i = index;i < digits.length();i++){
+            String s = tele[digits.charAt(i) - '2'];
+            for(int j = 0;j < s.length();j++){
+                sb.append(s.charAt(j));
+                backtrack(digits, sb, i + 1);
+                sb.deleteCharAt(sb.length() - 1);
+            }
+        }
+    }
+}
+```
+
+
+
+
+
+
+
 
 
 #### 22. 括号生成
+
+2
 
 > 数字 `n` 代表生成括号的对数，请你设计一个函数，用于能够生成所有可能的并且 **有效的** 括号组合。
 
