--- a/递归刷题集合.md
+++ b/递归刷题集合.md
@@ -1,8 +1,41 @@
+#### [19. 删除链表的倒数第 N 个结点](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/)
+
 #### [509. 斐波那契数](https://leetcode-cn.com/problems/fibonacci-number/)
 
 
 
 
+
+
+
+
+
+
+
+#### 19. 删除链表的倒数第 N 个结点 
+
+这个题目用递归来写，真的是……我就知道如果用栈的话，进去的第n个就是要删除那个
+
+这里……借助一个计数器，然后数到第n个的时候，就不要这个了，返回下一个，不然就要这一个。
+
+写出来不容易，现在还是没开窍。
+
+```java
+class Solution {
+    int count = 0;
+    public ListNode removeNthFromEnd(ListNode head, int n) {
+        if(head == null){
+            return null;
+        }
+        head.next = removeNthFromEnd(head.next, n);
+        count++;
+        if(n == count){
+            return head.next;
+        }
+        return head;
+    }
+}
+```
 
 
 
