--- a/链表.md
+++ b/链表.md
@@ -1,5 +1,35 @@
 #### [2. 两数相加](https://leetcode-cn.com/problems/add-two-numbers/)
 
+#### [19. 删除链表的倒数第 N 个结点](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/)
+
+[21. 合并两个有序链表](https://leetcode-cn.com/problems/merge-two-sorted-lists/)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -39,6 +69,96 @@ class Solution {
             }
         }
         return sentinal.next;
+    }
+}
+```
+
+
+
+
+
+
+
+#### 19. 删除链表的倒数第 N 个结点 
+
+快慢指针的应用。
+
+快指针先跑n步，然后慢指针再跑，最后再删除慢指针的下一个。
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution { 
+    public ListNode removeNthFromEnd(ListNode head, int n) {
+        if(head == null){
+            return null;
+        }   
+        ListNode sentinal = new ListNode(0);
+        sentinal.next = head;
+        ListNode fast = head;
+        ListNode slow = sentinal;
+        // 先跑n个
+        for(int i = 0;i < n;i++){
+            fast = fast.next;
+        }
+        // 快指针跑到尽头
+        while(fast  != null){
+            fast = fast.next;
+            slow = slow.next;
+        }
+        // 此时，慢指针的下一个就是要删除的元素了
+        slow.next = slow.next.next;
+        return  sentinal.next; 
+    }
+}
+```
+
+
+
+
+
+
+
+#### 21. 合并两个有序链表 
+
+一个……普通的链表操作
+
+然而我居然连续走两步【x
+
+已经next了还要next
+
+我的错
+
+```java
+class Solution {
+    public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+        ListNode sentinel = new ListNode(0);
+        ListNode cur = sentinel;
+        while(l1 != null && l2 != null){
+            if(l1.val <= l2.val){
+                cur.next = l1;
+                cur = l1;
+                l1 = l1.next;
+            }else{
+                cur.next = l2;
+                cur = l2;
+                l2 = l2.next;
+            } 
+        }
+        if(l1 == null){
+            cur.next = l2;
+        }else if(l2 == null){
+            cur.next = l1;
+        }
+        return sentinel.next;
     }
 }
 ```
