刷了两三个小时题目【x

--- a/动态规划刷题集合.md
+++ b/动态规划刷题集合.md
@@ -1,3 +1,9 @@
+
+
+#### [32. 最长有效括号](https://leetcode-cn.com/problems/longest-valid-parentheses/)
+
+
+
 #### [62. 不同路径](https://leetcode-cn.com/problems/unique-paths/)
 
 #### [63. 不同路径 II](https://leetcode-cn.com/problems/unique-paths-ii/)
@@ -23,6 +29,108 @@
 
 
 #### [1143. 最长公共子序列](https://leetcode-cn.com/problems/longest-common-subsequence/)
+
+
+
+
+
+#### 32. 最长有效括号
+
+
+
+> 给你一个只包含 '(' 和 ')' 的字符串，找出最长有效（格式正确且连续）括号子串的长度。
+>
+>  
+>
+> 示例 1：
+>
+> 输入：s = "(()"
+> 输出：2
+> 解释：最长有效括号子串是 "()"
+> 示例 2：
+>
+> 输入：s = ")()())"
+> 输出：4
+> 解释：最长有效括号子串是 "()()"
+> 示例 3：
+>
+> 输入：s = ""
+> 输出：0 
+
+它。。。分为好几类，我看一个答案很好，就摘抄一下。
+
+首先定义dp数组：第i个元素表示以第i个字符结尾的字符串的最长有效括号长度。
+
+它分为下面几类。
+
++ s[i] == '(' 左括号不管它
++ s[i] == ')'  这就有可能组成括号对
+  + s[i - 1] == '('
+    + 可以组成括号对，d[i] = 2
+    + 如果i >= 2，可以与前面组成的括号对组合在一起，即dp[i] += dp[i - 2]
+  + s[i - 1] == '('  得看再前面的了
+    + 当i-1这个位置已经是一个括号对组合时，即当dp[i - 1] > 0
+      + 如果s[i - dp[i - 1] - 1] == '('，那就是延长了dp[i - 1]这个组合，即dp[i] = dp[i - 1] + 2
+      + 再看看它的前一个位置是不是也是一个组合，这样就能再延长它，即 dp[i] += dp[i - dp[i - 1] - 2]
+
+![截屏2020-04-17下午4.26.34.png](%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92%E5%88%B7%E9%A2%98%E9%9B%86%E5%90%88.assets/6e07ddaac3b703cba03a9ea8438caf1407c4834b7b1e4c8ec648c34f2833a3b9-%E6%88%AA%E5%B1%8F2020-04-17%E4%B8%8B%E5%8D%884.26.34.png)
+
+按照这些条件写一遍就是了……
+
+不过一开始就是看不懂这个`i-dp[i-1]-1`是什么，其实它对应的坐标就是i这个坐标前移dp[i - 1]位，再前移1位
+
+前移dp[i - 1]就是i-1这个位置对应的最长有效括号的长度，那就是说跳过这个有效的括号串整体
+
+前移1位是要与i对应嘛
+
+下面是代码。
+
+（好乱，感觉写不清楚，表达不出来）
+
+```java
+class Solution {
+    public int longestValidParentheses(String s) {
+        if(s == null || s.length() == 0){
+            return 0;
+        }
+        int[] dp = new int[s.length()];
+        int maxVal = 0;
+        for(int i = 1;i < s.length();i++){
+            // 当前是右括号
+            if(s.charAt(i) == ')'){
+                // 如果是左
+                if(s.charAt(i - 1) == '('){
+                    dp[i] = 2;
+                    // 能否再接上前面的括号串？
+                    if(i - 2 >= 0){
+                        dp[i] += dp[i - 2];
+                    }
+                // s.charAt(i - 1) == ')'这个不行，因为上一个是右括号不代表它一定是组成括号串
+                }else if(dp[i - 1] > 0){
+                    // 看看i-1串的前一个是不是左括号（这样才能与i的右括号匹配）
+                    if((i - dp[i - 1] - 1) >= 0 && 
+                        s.charAt(i - dp[i - 1] - 1)  == '('){
+                        dp[i] += dp[i - 1] + 2;
+                        // 只有当其满足i的前面是括号串时，才考虑最前面的是不是括号串
+                        if((i - dp[i - 1] - 2) >= 0){
+                            dp[i] += dp[i - dp[i - 1] - 2];
+                        }
+                    }
+                    
+                }
+            }
+            maxVal = Math.max(maxVal, dp[i]);
+        }
+        return maxVal;
+    }
+}
+```
+
+
+
+
+
+
 
 
 
