--- a/二分查找刷题集合.md
+++ b/二分查找刷题集合.md
@@ -46,6 +46,9 @@ class Solution {
 
 
 
+#### [33. 搜索旋转排序数组](https://leetcode-cn.com/problems/search-in-rotated-sorted-array/)
+
+#### [34. 在排序数组中查找元素的第一个和最后一个位置](https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array/)
 
 
 
@@ -55,10 +58,180 @@ class Solution {
 
 
 
+#### 33. 搜索旋转排序数组 
+
+
+整数数组 `nums` 按升序排列，数组中的值 **互不相同** 。
+
+在传递给函数之前，`nums` 在预先未知的某个下标 `k`（`0 <= k < nums.length`）上进行了 **旋转**，使数组变为 `[nums[k], nums[k+1], ..., nums[n-1], nums[0], nums[1], ..., nums[k-1]]`（下标 **从 0 开始** 计数）。例如， `[0,1,2,4,5,6,7]` 在下标 `3` 处经旋转后可能变为 `[4,5,6,7,0,1,2]` 。
+
+给你 **旋转后** 的数组 `nums` 和一个整数 `target` ，如果 `nums` 中存在这个目标值 `target` ，则返回它的下标，否则返回 `-1` 。
+
+ 
+
+**示例 1：**
+
+```
+输入：nums = [4,5,6,7,0,1,2], target = 0
+输出：4
+```
+
+**示例 2：**
+
+```
+输入：nums = [4,5,6,7,0,1,2], target = 3
+输出：-1
+```
+
+**示例 3：**
+
+```
+输入：nums = [1], target = 0
+输出：-1
+```
+
+
+
+---
+
+已经n刷的一道题，然后突然开窍了会自己做了，就一下写出这个代码来。
+
+但是里面还是有个小问题，是关于<=和<的……
+
+```java
+class Solution {
+    public int search(int[] nums, int target) {
+        if(nums == null || nums.length == 0){
+            return -1;
+        }
+        int low = 0;
+        int high = nums.length - 1;
+        while(low <= high){
+            int mid = low + (high - low) / 2;
+            if(nums[mid] == target){
+                return mid;
+            }
+            // 为什么=要加在这里？
+            if(nums[low] <= nums[mid]){
+                if(nums[low] <= target && target < nums[mid]){
+                    high = mid - 1;
+                }else{
+                    low = mid + 1;
+                }
+            }else{
+                if(nums[mid] < target && target <= nums[high]){
+                    low = mid + 1;
+                }else{
+                    high = mid - 1;
+                }
+            }
+        }
+        return -1;
+    }
+}
+```
 
 
 
 
 
 
+
+#### 34. 在排序数组中查找元素的第一个和最后一个位置
+
+
+给定一个按照升序排列的整数数组 `nums`，和一个目标值 `target`。找出给定目标值在数组中的开始位置和结束位置。
+
+如果数组中不存在目标值 `target`，返回 `[-1, -1]`。
+
+**进阶：**
+
+- 你可以设计并实现时间复杂度为 `O(log n)` 的算法解决此问题吗？
+
+ 
+
+**示例 1：**
+
+```
+输入：nums = [5,7,7,8,8,10], target = 8
+输出：[3,4]
+```
+
+**示例 2：**
+
+```
+输入：nums = [5,7,7,8,8,10], target = 6
+输出：[-1,-1]
+```
+
+**示例 3：**
+
+```
+输入：nums = [], target = 0
+输出：[-1,-1]
+```
+
+---
+
+我也不想再做这个了
+
+总的来说就是逼迫左侧元素，比如找8，那就是找最左的8，然后再找9，9可能有也可能没有，反正它会停留在比9大一点的数那里，然后它的左边就是最右的8，这样，就能找到元素的最左和最右一个位置 。
+
+```java
+class Solution {
+    public int[] searchRange(int[] nums, int target) {
+        int low = search(nums, target);
+        // 比这个元素大1，到时它的左一位就是当前位的元素
+        int high = search(nums, target + 1);
+        if(low == nums.length || nums[low] != target){
+            return new int[]{-1, -1};
+        }
+        return new int[]{low, high - 1};
+    }
+
+    private int search(int[] nums, int target){
+        int low = 0, high = nums.length ;
+        while(low < high){
+            int mid = low + (high - low) / 2;
+            // 逼近左侧的元素……
+            if(nums[mid] >= target){
+                high = mid;
+            }else{
+                low = mid + 1;
+            }
+        }
+        return low;
+    }
+}
+```
+
+标答的做法，找最左的！第一个是target的最左的，第二个是比target大一点的最左的（它-1就是target最右的嘛 ），最后再校验。好像和上面的做法一样。
+
+```java
+class Solution {
+    public int[] searchRange(int[] nums, int target) {
+        int leftIndex = binarySearch(nums, target, true);
+        int rightIndex = binarySearch(nums, target, false) - 1;
+        if(leftIndex <= rightIndex && rightIndex < nums.length
+            && nums[leftIndex] == target && nums[rightIndex] == target){
+                return new int[]{leftIndex, rightIndex};
+            }
+        return new int[]{-1, -1};
+    }
+
+    private int binarySearch(int[] nums, int target, boolean lower){
+        int left = 0, right = nums.length - 1, ans = nums.length;
+        while(left <= right){
+            int mid = left + (right - left) / 2;
+            if(nums[mid] > target || (lower && nums[mid] >= target)){
+                right = mid - 1;
+                ans = mid;
+            }else{
+                left = mid + 1;
+            }
+        }
+        return ans;
+    }
+}
+```
 
