--- a/字符串.md
+++ b/字符串.md
@@ -6,6 +6,8 @@
 
 
 
+#### [49. 字母异位词分组](https://leetcode-cn.com/problems/group-anagrams/)
+
 
 
 
@@ -50,3 +52,95 @@ class Solution {
 }
 ```
 
+
+
+#### 49. 字母异位词分组
+
+
+给定一个字符串数组，将字母异位词组合在一起。字母异位词指字母相同，但排列不同的字符串。
+
+**示例:**
+
+```
+输入: ["eat", "tea", "tan", "ate", "nat", "bat"]
+输出:
+[
+  ["ate","eat","tea"],
+  ["nat","tan"],
+  ["bat"]
+]
+```
+
+---
+
+这个也不好说是字符串，但是用到了很多杂杂的知识。
+
+方法一：计数
+
+遍历每个词，然后记录每个词对应的字母个数，然后以这个个数为key，存在hash表中，如果找到相同的，再放进去，最后就从哈希表中得到结果。
+
+有几个哈希表的用法我感觉十分……？灵活。
+
++ `Map<String, List<String>> map = new HashMap<>();`
++ `map.getOrDefault(key, new ArrayList<>());`
++ `return new ArrayList<>(map.values());`
+
+
+
+```java
+class Solution {
+    public List<List<String>> groupAnagrams(String[] strs) {
+        Map<String, List<String>> map = new HashMap<>();
+        for(String s : strs){
+            int[] counts = new int[26];
+            int length = s.length();
+            for(int i = 0;i < length;i++){
+                counts[s.charAt(i) - 'a']++;
+            }
+            StringBuilder sb = new StringBuilder();
+            for(int i = 0;i < 26;i++){
+                if(counts[i] != 0){
+                    sb.append((char)'a' + i);
+                    sb.append(counts[i]);
+                }
+            }
+            String key = sb.toString();
+            List<String> list = map.getOrDefault(key, new ArrayList<>());
+            list.add(s);
+            map.put(key, list);
+        }
+        return new ArrayList<>(map.values());
+    }
+}
+```
+
+还有一种做法是排序，然后利用排序后的值为哈希表的key，然后统计以这个为key到底有多少个值。
+
+```java
+class Solution {
+    public List<List<String>> groupAnagrams(String[] strs) {
+        Map<String, List<String>> map = new HashMap<>();
+        for(String str : strs){
+            char[] chars = str.toCharArray();
+            Arrays.sort(chars);
+            // String key = chars.toString();
+            String key = String.valueOf(chars);
+            List<String> list = map.getOrDefault(key, new ArrayList<>());
+            list.add(str);
+            map.put(key, list);
+        }
+        return new ArrayList<>(map.values());
+    }
+}
+```
+
+PS:我居然把toString()方法能整傻了。
+
+```java
+// String key = chars.toString();
+String key = String.valueOf(chars);
+```
+
+我想把它变成字符串，但其实返回的是它的类名+@+哈希值。
+
+我的天……我真的好傻
