--- a/回溯刷题集合.md
+++ b/回溯刷题集合.md
@@ -6,6 +6,14 @@
 
 #### [22. 括号生成](https://leetcode-cn.com/problems/generate-parentheses/)
 
+#### [39. 组合总和](https://leetcode-cn.com/problems/combination-sum/)
+
+#### [46. 全排列](https://leetcode-cn.com/problems/permutations/)
+
+
+
+
+
 
 
 #### [78. 子集](https://leetcode-cn.com/problems/subsets/)
@@ -185,6 +193,186 @@ class Solution {
     }
 }
 ```
+
+
+
+#### 39. 组合总和 
+
+给定一个**无重复元素**的数组 `candidates` 和一个目标数 `target` ，找出 `candidates` 中所有可以使数字和为 `target` 的组合。
+
+`candidates` 中的数字可以无限制重复被选取。
+
+**说明：**
+
+- 所有数字（包括 `target`）都是正整数。
+- 解集不能包含重复的组合。 
+
+**示例 1：**
+
+```
+输入：candidates = [2,3,6,7], target = 7,
+所求解集为：
+[
+  [7],
+  [2,2,3]
+]
+```
+
+**示例 2：**
+
+```
+输入：candidates = [2,3,5], target = 8,
+所求解集为：
+[
+  [2,2,2,2],
+  [2,3,3],
+  [3,5]
+]
+```
+
+---
+
+这次我好像真的开窍了233333333选一个，加进候选队列，然后继续下一层
+
+```java
+class Solution {
+    List<List<Integer>> res = new ArrayList<>();
+    public List<List<Integer>> combinationSum(int[] candidates, int target) {
+        Arrays.sort(candidates);
+        backtrack(candidates, target, new ArrayList<>(), 0);
+        return res;
+    }
+
+    private void backtrack(int[] candidates, int target, List<Integer> list, int index){
+        if(target < 0){
+            return ;
+        }
+        if(target == 0){
+            res.add(new ArrayList<>(list));
+            return ;
+        }
+
+        for(int i = index;i < candidates.length;i++){
+            if(target - candidates[i] < 0){
+                break;
+            }
+            list.add(candidates[i]);
+            backtrack(candidates, target - candidates[i], list, i);
+            list.remove(list.size() - 1);
+        }
+    } 
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+#### 46. 全排列 
+
+
+给定一个不含重复数字的数组 `nums` ，返回其 **所有可能的全排列** 。你可以 **按任意顺序** 返回答案。
+
+ 
+
+**示例 1：**
+
+```
+输入：nums = [1,2,3]
+输出：[[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]
+```
+
+**示例 2：**
+
+```
+输入：nums = [0,1]
+输出：[[0,1],[1,0]]
+```
+
+**示例 3：**
+
+```
+输入：nums = [1]
+输出：[[1]]
+```
+
+---
+
+它不需要顺序，只要求有没有，那就使用一个数组标记是否走过这里就行了。
+
+```java
+class Solution {
+    List<List<Integer>> res = new ArrayList<>();
+    public List<List<Integer>> permute(int[] nums) {
+        int[] visited = new int[nums.length];
+        backtrack(nums, visited, new ArrayList<>());
+        return res;
+    }
+
+
+    private void backtrack(int[] nums, int[] visited, List<Integer> list){
+        if(list.size() == nums.length){
+            res.add(new ArrayList<>(list));
+            return ;
+        }
+
+        for(int i = 0;i < nums.length;i++){
+            if(visited[i] == 1){
+                continue;
+            }
+            list.add(nums[i]);
+            visited[i] = 1;
+            backtrack(nums, visited, list);
+            visited[i] = 0;
+            list.remove(list.size() - 1);
+        }
+    }
+}
+```
+
+还有一种不用标记数组的做法，就是交换位置。主要是这句启发了我`backtrack(n, first + 1);`
+
+每一个元素都会轮一次，然后first左边的是用过的，一换完就+1，每+1就到下一层。
+
+轮到最后一个 ？……	
+
+```java
+class Solution {
+    List<List<Integer>> res = new ArrayList<>();
+    List<Integer> path = new ArrayList<>();
+    public List<List<Integer>> permute(int[] nums) { 
+        for(int i : nums){
+            path.add(i);
+        }
+        backtrack(nums.length, 0);
+        return res;
+    }
+
+    private void backtrack(int n, int first){
+        if(first == n){
+            res.add(new ArrayList<>(path));
+            return ;
+        }
+        for(int i = first;i < n;i++){
+            Collections.swap(path, first, i);
+            // 这里是first+1而不是i+1 
+            backtrack(n, first + 1);
+            Collections.swap(path, first, i);
+        }
+    }
+ 
+}
+```
+
+
 
 
 
