今天刷得有、少

--- a/动态规划刷题集合.md
+++ b/动态规划刷题集合.md
@@ -2,11 +2,17 @@
 
 #### [32. 最长有效括号](https://leetcode-cn.com/problems/longest-valid-parentheses/)
 
-
+#### [53. 最大子序和](https://leetcode-cn.com/problems/maximum-subarray/)
 
 #### [62. 不同路径](https://leetcode-cn.com/problems/unique-paths/)
 
 #### [63. 不同路径 II](https://leetcode-cn.com/problems/unique-paths-ii/)
+
+
+
+#### [70. 爬楼梯](https://leetcode-cn.com/problems/climbing-stairs/)
+
+
 
 #### [198. 打家劫舍](https://leetcode-cn.com/problems/house-robber/)
 
@@ -130,9 +136,72 @@ class Solution {
 
 
 
+#### 53. 最大子序和 
 
 
+给定一个整数数组 `nums` ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
 
+ 
+
+**示例 1：**
+
+```
+输入：nums = [-2,1,-3,4,-1,2,1,-5,4]
+输出：6
+解释：连续子数组 [4,-1,2,1] 的和最大，为 6 。
+```
+
+**示例 2：**
+
+```
+输入：nums = [1]
+输出：1
+```
+
+**示例 3：**
+
+```
+输入：nums = [0]
+输出：0
+```
+
+**示例 4：**
+
+```
+输入：nums = [-1]
+输出：-1
+```
+
+**示例 5：**
+
+```
+输入：nums = [-100000]
+输出：-100000
+```
+
+---
+
+这个题目也是一个动态规划噢……
+
+其实就是你怎么确定最大子序和。
+
+如果你之前的和加上这个比现在这个小，那就不要之前的了，只要现在的。
+
+或者说，找能够扩大你的最大子序的，哪怕是多一点。
+
+ ```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int pre = 0;
+        int max = Integer.MIN_VALUE;
+        for(int i = 0;i < nums.length;i++){
+            pre = Math.max(pre + nums[i], nums[i]);
+            max = Math.max(max, pre);
+        }
+        return max;
+    }
+}
+ ```
 
 
 
@@ -228,7 +297,57 @@ class Solution {
 
 
 
+#### 70. 爬楼梯 
 
+
+假设你正在爬楼梯。需要 *n* 阶你才能到达楼顶。
+
+每次你可以爬 1 或 2 个台阶。你有多少种不同的方法可以爬到楼顶呢？
+
+**注意：**给定 *n* 是一个正整数。
+
+**示例 1：**
+
+```
+输入： 2
+输出： 2
+解释： 有两种方法可以爬到楼顶。
+1.  1 阶 + 1 阶
+2.  2 阶
+```
+
+**示例 2：**
+
+```
+输入： 3
+输出： 3
+解释： 有三种方法可以爬到楼顶。
+1.  1 阶 + 1 阶 + 1 阶
+2.  1 阶 + 2 阶
+3.  2 阶 + 1 阶
+```
+
+---
+
+就。。。如果想上第k层楼层，要么是从第k-1层上来，要么是从k-2层上来，那它上来的总方法就是这两个方法的和。
+
+```java
+class Solution {
+    public int climbStairs(int n) {
+        if(n <= 2){
+            return n;
+        }
+        int first = 1;
+        int second = 2; 
+        for(int i = 3;i <= n;i++){
+            int sum = first + second;
+            first = second;
+            second = sum;
+        }
+        return second;
+    }
+}
+```
 
 
 
