--- a/回溯刷题集合.md
+++ b/回溯刷题集合.md
@@ -18,7 +18,7 @@
 
 #### [78. 子集](https://leetcode-cn.com/problems/subsets/)
 
-
+#### [79. 单词搜索](https://leetcode-cn.com/problems/word-search/)
 
 
 
@@ -378,7 +378,7 @@ class Solution {
 
 #### 78. 子集 
 
-
+2
 
 > 给你一个整数数组 `nums` ，数组中的元素 **互不相同** 。返回该数组所有可能的子集（幂集）。
 >
@@ -444,6 +444,130 @@ class Solution {
         temp.remove(temp.size() - 1);
         // 不选这个
         dfs(cur + 1, nums);
+    }
+}
+```
+
+---
+
+最后还有一种，就是一次加一个（当前，nums[i]）），下一层就拿上一层的所有来加，一层一层地加上去。
+
+哎呀好奇怪，我列一下就知道了
+
++ []
++ [1]
++ [2], [1, 2]
++ [3], [1, 3], [2, 3], [1, 2, 3]
+
+有没有发现，下一层是上面所有的个数都加上nums[i]
+
+```java
+class Solution {
+    public List<List<Integer>> subsets(int[] nums) {
+        List<List<Integer>> res = new ArrayList<>();
+        res.add(new ArrayList<>());
+        for(int i = 0;i < nums.length;i++){
+            int all = res.size();
+            for(int j = 0;j < all;j++){
+                // 注：不能 List<Integer> = res.get(j);
+                List<Integer> temp = new ArrayList<>(res.get(j));
+                temp.add(nums[i]);
+                res.add(temp);
+            }
+        }
+        return res;
+    }
+}
+```
+
+
+
+
+
+
+
+#### 79. 单词搜索 
+
+
+给定一个 `m x n` 二维字符网格 `board` 和一个字符串单词 `word` 。如果 `word` 存在于网格中，返回 `true` ；否则，返回 `false` 。
+
+单词必须按照字母顺序，通过相邻的单元格内的字母构成，其中“相邻”单元格是那些水平相邻或垂直相邻的单元格。同一个单元格内的字母不允许被重复使用。
+
+ 
+
+**示例 1：**
+
+![img](回溯刷题集合.assets/word2.jpg)
+
+```
+输入：board = [["A","B","C","E"],["S","F","C","S"],["A","D","E","E"]], word = "ABCCED"
+输出：true
+```
+
+**示例 2：**
+
+![img](回溯刷题集合.assets/word-1.jpg)
+
+```
+输入：board = [["A","B","C","E"],["S","F","C","S"],["A","D","E","E"]], word = "SEE"
+输出：true
+```
+
+**示例 3：**
+
+![img](回溯刷题集合.assets/word3.jpg)
+
+```
+输入：board = [["A","B","C","E"],["S","F","C","S"],["A","D","E","E"]], word = "ABCB"
+输出：false
+```
+
+ 
+
+**提示：**
+
+- `m == board.length`
+- `n = board[i].length`
+- `1 <= m, n <= 6`
+- `1 <= word.length <= 15`
+- `board` 和 `word` 仅由大小写英文字母组成
+
+ 
+
+**进阶：**你可以使用搜索剪枝的技术来优化解决方案，使其在 `board` 更大的情况下可以更快解决问题？
+
+
+
+
+
+```java
+class Solution {
+    public boolean exist(char[][] board, String word) {
+        for(int i = 0;i < board.length;i++){
+            for(int j = 0;j < board[0].length;j++){ 
+                if(board[i][j] == word.charAt(0) && search(board, word, i, j, 0)){
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    private boolean search(char[][] board, String word, int i, int j, int index){
+        if(index >= word.length()){
+            return true;
+        }
+        if(i < 0 || i >= board.length || j < 0 || j >= board[0].length
+             || board[i][j] != word.charAt(index)){
+            return false;
+        }
+        board[i][j] += 256;
+        boolean flag = search(board, word, i + 1, j, index + 1) ||
+                        search(board, word, i - 1, j, index + 1) ||
+                        search(board, word, i, j + 1, index + 1) ||
+                        search(board, word, i, j - 1, index + 1);
+        board[i][j] -= 256;
+        return flag;
     }
 }
 ```
