--- a/递归刷题集合.md
+++ b/递归刷题集合.md
@@ -1,5 +1,13 @@
 #### [19. 删除链表的倒数第 N 个结点](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/)
 
+
+
+#### [64. 最小路径和](https://leetcode-cn.com/problems/minimum-path-sum/)
+
+
+
+
+
 #### [509. 斐波那契数](https://leetcode-cn.com/problems/fibonacci-number/)
 
 
@@ -36,6 +44,71 @@ class Solution {
     }
 }
 ```
+
+
+
+
+
+#### 64. 最小路径和 
+
+
+给定一个包含非负整数的 `*m* x *n*` 网格 `grid` ，请找出一条从左上角到右下角的路径，使得路径上的数字总和为最小。
+
+**说明：**每次只能向下或者向右移动一步。
+
+ 
+
+**示例 1：**
+
+![img](递归刷题集合.assets/minpath.jpg)
+
+```
+输入：grid = [[1,3,1],[1,5,1],[4,2,1]]
+输出：7
+解释：因为路径 1→3→1→1→1 的总和最小。
+```
+
+**示例 2：**
+
+```
+输入：grid = [[1,2,3],[4,5,6]]
+输出：12
+```
+
+---
+
+一个。。简单的dp？
+
+然而我还是会用那个。。新的数组 ？其实在原数组上作修改也是可以的，直接加就行了，
+
+我一开始写的时候，重新创建一个dp数组，还是漏了边界，边界也要累加啊，因为它只有一条路。
+
+```java
+class Solution {
+    public int minPathSum(int[][] grid) {
+        int m = grid.length;
+        int n = grid[0].length; 
+        for(int i = 1;i < n;i++){
+            grid[0][i] += grid[0][i - 1];
+        }
+        for(int i = 1;i < m;i++){
+            grid[i][0] += grid[i - 1][0];
+        }
+        for(int i = 1;i < m;i++){
+            for(int j = 1;j < n;j++){
+                grid[i][j] += Math.min(grid[i - 1][j], grid[i][j - 1]);
+            }
+        }
+        return grid[m - 1][n - 1];
+    }
+}
+```
+
+
+
+
+
+
 
 
 
